@@ -2,9 +2,12 @@ console-setup (1.8) UNRELEASED; urgency=low
 
   * setupcon: new option --force to skip the 'are we on the console'
     check.  To be used for d-i because there /proc/self/fd/2 points to
-    pipe.  Thanks to Tollef Fog Heen from the Ubuntu team.
+    pipe.  Thanks to Tollef Fog Heen.
+  * console-setup.config: Handle C locale with debian-installer/locale not
+    being available.  Thanks to Colin Watson for the bug report and the
+    patch, closes: #386835.
 
- -- Anton Zinoviev <zinoviev@debian.org>  Sat, 22 Jul 2006 23:31:23 +0300
+ -- Anton Zinoviev <zinoviev@debian.org>  Fri, 15 Sep 2006 21:12:35 +0300
 
 console-setup (1.7) unstable; urgency=low
 
